tests/models/enum/named/i8/fail/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(lt = 2.0)]
        value: i8
    },
}
fn main() {}
